core: Fix button spacing on show_user
Closes #1601

--- a/static/cdedb.css
+++ b/static/cdedb.css
@@ -273,8 +273,8 @@ ul.nosp, ol.nosp {
 .form-group.mosp {
     margin-top: 16px;
 }
-.btn.mosp {
-    margin-top: 5px
+.btn.mosp, img.mosp {
+    margin-bottom: 5px
 }
 .panel-body>:last-child {
     margin-bottom: 0;
